--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Header</h1>
+    <p>text</p>
+    <script src="script.js"></script>
 </body>
 </html>
