--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Header</h1>
     <p>text</p>
+    <p>more text to be added here</p>
     <script src="script.js"></script>
 </body>
 </html>
