--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Header</h1>
     <p>text</p>
     <p>more text to be added here</p>
-    <p>and some more added via github to see how this works out</>
+    <p>and some more added via github to see how this works out</p>
     <script src="script.js"></script>
 </body>
 </html>
