--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <p>text</p>
     <p>more text to be added here</p>
     <p>and some more added via github to see how this works out</p>
+    <p>let's test if I can push this request</p>
     <script src="script.js"></script>
 </body>
 </html>
