--- a/index.html
+++ b/index.html
@@ -1,73 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
+    <!-- Required meta tags -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Historia</title>
     <!-- Bootstrap CSS file -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- own stylesheet -->
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script> 
-
-</head>
-<body>
+    <!-- JavaScript file just in case I need it-->   
+    <script src="script.js" defer></script>   
+  </head>
+  <body>
+    <!-- Header below -->
     <header></header>
-    <!-- Navigointipalkki-->
+    <!-- Navigation from bootstrap-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand">Tästä muille sivuille:</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" 
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <div class="container-fluid">
+        <a class="navbar-brand">Tästä muille sivuille:</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
+          data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" 
+          aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <li class="nav-item">
-                    <a class="nav-link" href="kuvakysymykset.html">Tunnista henkilöt</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="tekstikysymykset.html">Tiedä tai arvaa</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="paikat.html">Historiallisia paikkoja</a>
-                  </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="sivustotieto.html">Tietoa sivusta</a>
-                </li>
+                  <a class="nav-link" href="kuvakysymykset.html">Tunnista henkilöt</a>
               </li>
-            </ul>
-          </div>
+              <li class="nav-item">
+                  <a class="nav-link" href="tekstikysymykset.html">Tiedä tai arvaa</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="paikat.html">Historiallisia paikkoja</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="sivustotieto.html">Tietoa sivusta</a>
+              </li>
+          </ul>
         </div>
-      </nav>
-      <!-- Navigointipalkki päättyy-->
-
-        <div class="row">
-            <div class="col-md-12">
-                <article>
-                  Kuvaketta klikkaamalla pääset vastaamaan kuva-arvoituksiin tai kysymyksiin:
-                <br>
-                <br>
-                    <p>
-                        <a href="kuvakysymykset.html"><img src="images/Madame_de_Pompadour_blurred_text.jpg" alt="kuvakysymykset" id="kuvakysymyksetKuvake"></a>
-                        <a href="tekstikysymykset.html"><img src="images/daVinci_text.jpg" alt="tekstikysymykset" id="tekstikysymyksetKuvake"></a>
-                        <a href="paikat.html"><img src="images/vagon.png" alt="paikat" id="paikatKuvake"></a>
-                    </p>
-              </article>
-              </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <footer>
-                    <p>Päivi Karhumaa (c) 2022</p>
-                </footer>
-            </div>
-        </div>
+      </div>
+    </nav>
+    <!-- Navigation ends-->
+    <!-- task panel with clickable pictures starts -->
+    <div class="row">
+      <div class="col-md-12">
+        <article>
+          Kuvaketta klikkaamalla pääset vastaamaan kuva-arvoituksiin tai kysymyksiin:
+          <br>
+          <br>
+        <p>
+          <a href="kuvakysymykset.html"><img src="images/Madame_de_Pompadour_blurred_text.jpg" alt="kuvakysymykset" id="kuvakysymyksetKuvake"></a>
+          <a href="tekstikysymykset.html"><img src="images/daVinci_text.jpg" alt="tekstikysymykset" id="tekstikysymyksetKuvake"></a>
+          <a href="paikat.html"><img src="images/vagon.png" alt="paikat" id="paikatKuvake"></a>
+        </p>
+        </article>
+      </div>
     </div>
-  
+    <!-- task panel ends -->
+    <!-- footer below -->      
+    <div class="row">
+      <div class="col-md-12">
+        <footer>
+          <p>Päivi Karhumaa (c) 2022</p>
+        </footer>
+      </div>
+    </div>      
     <!-- Bootstrap JS file -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-</body>
+  </body>
 </html>
