--- a/sivustotieto.html
+++ b/sivustotieto.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Required meta tags -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,59 +9,63 @@
     <!-- Bootstrap CSS file -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- own stylesheet-->
     <link rel="stylesheet" href="sivustotieto.css">
+    <!-- JavaScript file -->
     <script src="sivustotieto.js" defer></script>
 </head>
 <body>
-    <header></header>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand">Tästä muille sivuille:</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" 
-          aria-controls="navbarSupportedContent" 
-          aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Pääsivu</a>
-              </li>  
-              <li class="nav-item">
-                <a class="nav-link" href="kuvakysymykset.html">Tunnista henkilöt</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="paikat.html">Historiallisia paikkoja</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="tekstikysymykset.html">Tiedä tai arvaa!</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-    </nav>
-    <!-- Navbar ends-->
-        <div class="row">
-            <div class="col-md-12">
-                <article>
-                  Sivusto on julkaistu 5/2022 osana OAMK:n Webtekniikat-kurssia. <br></br>
-                  Sivusto kehitettiin niillä tekniikoilla, joita on opintojen ensimmäisten neljän kuukauden aikana opetettu.<br></br>
-                  Sivuston on tuottanut Päivi Karhumaa TIK22KM. 
-                  Kuvalähteinä on käytetty xxxx ja niiden alkuperäisiin lähteisiin pääsee klikkaamalla kuvaa.
-                </article>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <footer>
-                    <p>Päivi Karhumaa (c) 2022</p>
-                </footer>
-            </div>
-        </div>
+  <!-- Header below -->
+  <header></header>
+  <!-- Navbar from Bootstrap-->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand">Tästä muille sivuille:</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" 
+        aria-controls="navbarSupportedContent" 
+        aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Pääsivu</a>
+          </li>  
+          <li class="nav-item">
+            <a class="nav-link" href="tekstikysymykset.html">Tiedä tai arvaa!</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="paikat.html">Historiallisia paikkoja</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="kuvakysymykset.html">Tunnista henkilöt</a>
+          </li>
+        </ul>
+      </div>    
     </div>
-  
+  </nav>  
+  <!-- Navbar ends-->
+  <!-- information article starts -->
+    <div class="row">
+      <div class="col-md-12">
+        <article>
+            Sivusto on julkaistu 5/2022 osana OAMK:n Webtekniikat-kurssia. <br></br>
+            Sivusto kehitettiin niillä tekniikoilla, joita on opintojen ensimmäisten neljän kuukauden aikana opetettu.<br></br>
+            Sivuston on tuottanut Päivi Karhumaa TIK22KM. 
+            Kuvalähteinä on käytetty xxxx ja niiden alkuperäisiin lähteisiin pääsee klikkaamalla kuvaa.
+        </article>          
+      </div>
+    </div>  
+    <div class="row">
+      <div class="col-md-12">
+      <!-- footer below -->
+      <footer>
+        <p>Päivi Karhumaa (c) 2022</p>
+      </footer>        
+      </div>
+    </div>  
     <!--Bootstrap JS file -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  </body>
 </html>
