added gradient and other style-related

--- a/tekstikysymykset.html
+++ b/tekstikysymykset.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Tämän sivun HTML, CSS - ja JavaScript -koodiin on otettu mallia OAMK TIK22KM Ryhmä 16 projektityöstä /M.Rekinen (c) 2022.  -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -100,7 +101,7 @@
             <div id="question5" class="hidden">
               <legend>Luvig XIV oli Ranskan kuningas vuosina 1643 - 1715. Millä lempinimellä häntä kutsuttiin?</legend><br>
               <input type="radio" name="radioAnswer" id="right5"> Aurinkokuningas<br>
-              <input type="radio" name="radioAnswer" id="wrong"> Vuorikeisari<br>
+              <input type="radio" name="radioAnswer" id="wrong"> Vuoristoneuvos<br>
               <input type="radio" name="radioAnswer" id="wrong"> Kuuvaltias<br>
               <input type="radio" name="radioAnswer" id="wrong"> Palvottu<br>
               <button class="checkbutton checkbutton5" onclick="question5()">Tarkista</button><br>
