--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Historia</title>
+    <title>Historia pääsivu</title>
     <!-- Bootstrap CSS file -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -53,9 +53,9 @@
           <br>
           <br>
         <p>
-          <a href="kuvakysymykset.html"><img src="images/Madame_de_Pompadour_blurred_text.jpg" alt="kuvakysymykset" id="kuvakysymyksetKuvake"></a>
-          <a href="tekstikysymykset.html"><img src="images/daVinci_text.jpg" alt="tekstikysymykset" id="tekstikysymyksetKuvake"></a>
-          <a href="paikat.html"><img src="images/vagon.png" alt="paikat" id="paikatKuvake"></a>
+          <a href="kuvakysymykset.html"><img src="images/Madame_de_Pompadour_blurred_text.jpg" alt="kuvakysymykset" id="kuvakysymyksetKuvake" class="kuvake"></a>
+          <a href="tekstikysymykset.html"><img src="images/daVinci_text.jpg" alt="tekstikysymykset" id="tekstikysymyksetKuvake" class="kuvake"></a>
+          <a href="paikat.html"><img src="images/vagon.png" alt="paikat" id="paikatKuvake" class="kuvake"></a>
         </p>
         </article>
       </div>
@@ -65,7 +65,13 @@
     <div class="row">
       <div class="col-md-12">
         <footer>
-          <p>Päivi Karhumaa (c) 2022</p>
+          <p>Päivi Karhumaa (c) 2022 <br> 
+            Tämän sivun kuvat: <br>
+            Madame de Pompadour (Kuva taideteoksesta, tekijä Francois Boucher 1756, Wikipedia hakupäivä 11.5.2022) <a href= https://fi.wikipedia.org/wiki/Madame_de_Pompadour> Kuva Wikipediassa</a><br>
+            Leonardo da Vincin piirros Arnon laaksosta vuodelta 1473 (Kuva taideteoksesta, Wikipedia, hakupäivä 11.5.2022) <a href= https://fi.wikipedia.org/wiki/Leonardo_da_Vinci>Kuva Wikipediassa</a><br>
+            Katettu vaunu (Valokuva, Pixabay  hakupäivä 11.5.2022) <a href= https://pixabay.com/fi/photos/katettu-vaunu-yhdysvallat-amerikka-2967229 >Kuva Pixabayssa</a>
+          </p>
+
         </footer>
       </div>
     </div>      
