--- a/kuvakysymykset.html
+++ b/kuvakysymykset.html
@@ -143,7 +143,8 @@
     <div class="row">
       <div class="col-md-12">
           <footer>
-              <p>Päivi Karhumaa (c) 2022 </p>
+              <p>Päivi Karhumaa (c) 2022 <br>
+                Kuvakysymysten kuvat on haettu internetistä, hakupäivä 11.5.2022. Kuvan lähde löytyy jokaisen kuvan takaa linkkinä, joten kuvaa klikkaamalla pääset alkuperäiselle sivulle. </p>
           </footer>
       </div>
     </div>
