--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <!-- Header below -->
     <header></header>
-    <!-- Navigation from bootstrap-->
+    <!-- Navigation from bootstrap, under the header-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand">Tästä muille sivuille:</a>
@@ -61,20 +61,42 @@
       </div>
     </div>
     <!-- task panel ends -->
+    <!-- Bootsrap accordion below, on the footer -->
+    <div class="row">
+      <div class="col-md-12">
+        <footer>
+          <div class="accordion accordion-flush" id="accordionFlushExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="flush-headingOne">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" 
+                  data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                  Pääsivun kuvalähteiden tiedot
+                </button>
+              </h2>
+              <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" 
+                data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">
+                    <p>Tämän sivun kuvat: <br>
+                      Madame de Pompadour (Kuva taideteoksesta, tekijä Francois Boucher 1756, Wikipedia hakupäivä 11.5.2022) <a href= https://fi.wikipedia.org/wiki/Madame_de_Pompadour> Kuva Wikipediassa</a><br>
+                      Leonardo da Vincin piirros Arnon laaksosta vuodelta 1473 (Kuva taideteoksesta, Wikipedia, hakupäivä 11.5.2022) <a href= https://fi.wikipedia.org/wiki/Leonardo_da_Vinci>Kuva Wikipediassa</a><br>
+                      Katettu vaunu (Valokuva, Pixabay  hakupäivä 11.5.2022) <a href= https://pixabay.com/fi/photos/katettu-vaunu-yhdysvallat-amerikka-2967229 >Kuva Pixabayssa</a>
+                    </p>
+                </div>
+              </div>
+            </div>
+          </div>  
+        </footer>
+      </div>
+    </div> 
     <!-- footer below -->      
     <div class="row">
       <div class="col-md-12">
         <footer>
           <p>Päivi Karhumaa (c) 2022 <br> 
-            Tämän sivun kuvat: <br>
-            Madame de Pompadour (Kuva taideteoksesta, tekijä Francois Boucher 1756, Wikipedia hakupäivä 11.5.2022) <a href= https://fi.wikipedia.org/wiki/Madame_de_Pompadour> Kuva Wikipediassa</a><br>
-            Leonardo da Vincin piirros Arnon laaksosta vuodelta 1473 (Kuva taideteoksesta, Wikipedia, hakupäivä 11.5.2022) <a href= https://fi.wikipedia.org/wiki/Leonardo_da_Vinci>Kuva Wikipediassa</a><br>
-            Katettu vaunu (Valokuva, Pixabay  hakupäivä 11.5.2022) <a href= https://pixabay.com/fi/photos/katettu-vaunu-yhdysvallat-amerikka-2967229 >Kuva Pixabayssa</a>
           </p>
-
         </footer>
       </div>
-    </div>      
+    </div>  
     <!-- Bootstrap JS file -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
