--- a/tekstikysymykset.html
+++ b/tekstikysymykset.html
@@ -131,7 +131,7 @@
         </div>
       </div>
     </article>           
-    <!-- Bootstrap accordion -->
+    <!-- Bootstrap accordion below-->
     <div class="row">
       <div class="col-md-12">
         <footer>
