--- a/paikat.html
+++ b/paikat.html
@@ -5,9 +5,84 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Places</title>
+    <!-- own stylesheet-->
+    <link rel="stylesheet" href="paikat.css">
+    <!-- JavaScript file -->
+    <script src="paikat.js" defer></script>    
 </head>
 <body>
-    <h1>Heading</h1>
-    
+    <header>
+        <h1>Nähtävyyksiä historiaa harrastaville</h1>
+    </header>
+    <!-- bootstrap sidebar-->
+    <div class="container-fluid">
+        <div class="row flex-nowrap">
+            <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark sidebar">
+                <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
+                    <a href="/" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+                        <span class="fs-5 d-none d-sm-inline"></span>
+                    </a>
+                    <h3>Tästä muille sivuille:</h3>
+                    <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
+                        <li class="nav-item">
+                            <a href="index.html" class="nav-link align-middle px-0">
+                                <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Pääsivu</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="kuvakysymykset.html" class="nav-link align-middle px-0">
+                                <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Tunnista henkilöt</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="tekstikysymykset.html" class="nav-link align-middle px-0">
+                                <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Tiedä tai arvaa!</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="sivustotieto.html" class="nav-link align-middle px-0">
+                                <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Tietoja sivusta</span>
+                            </a>
+                        </li>
+                    </ul>
+                    <hr>
+                </div>
+            </div>   
+        </div>
+    </div>    
+    <div class="col py-3">
+    <!-- bootstrap sidebar ends-->  
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-sm-12">
+                <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat sint, eaque necessitatibus voluptate atque aliquid 
+                    voluptatibus eligendi ducimus provident unde modi, animi voluptates fuga cumque a hic eius enim optio.
+                </p>
+            </div>
+            <div class="col-md-3 col-sm-6">
+                <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat sint, eaque necessitatibus voluptate atque aliquid 
+                    voluptatibus eligendi ducimus provident unde modi, animi voluptates fuga cumque a hic eius enim optio.
+                </p>
+            </div>
+            <div class="col-md-3 col-sm-6">
+                <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat sint, eaque necessitatibus voluptate atque aliquid 
+                    voluptatibus eligendi ducimus provident unde modi, animi voluptates fuga cumque a hic eius enim optio.
+                </p>
+            </div>
+        
+        <div class="row">
+            <div class="col">
+            <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat sint, eaque necessitatibus voluptate atque aliquid 
+                voluptatibus eligendi ducimus provident unde modi, animi voluptates fuga cumque a hic eius enim optio.
+            </p>
+            </div>
+        </div>
+    </div>   
+
+
+    <!-- bootstrap css below-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnik
+    T1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
 </body>
 </html>
