--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <!-- Header below -->
-    <header></header>
+    <header>Tämä on pää-header. Jokin kuva tänne vielä?</header>
     <!-- Navigation from bootstrap, under the header-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
