--- a/paikat.html
+++ b/paikat.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Places</title>
-    <!-- own stylesheet-->
+    <!--css from bootstrap below-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
+    rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- own stylesheet below-->
     <link rel="stylesheet" href="paikat.css">
     <!-- JavaScript file -->
     <script src="paikat.js" defer></script>    
@@ -13,74 +16,94 @@
 <body>
     <header>
         <h1>Nähtävyyksiä historiaa harrastaville</h1>
+        <!-- Navigation from bootstrap-->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+            <a class="navbar-brand">Tästä muille sivuille:</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" 
+                aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Pääsivu</a>
+                </li>  
+                <li class="nav-item">
+                    <a class="nav-link" href="kuvakysymykset.html">Tunnista henkilöt</a>
+                    </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="tekstikysymykset.html">Tiedä tai arvaa!</a>
+                </li>
+                
+                <li class="nav-item">
+                    <a class="nav-link" href="sivustotieto.html">Tietoa sivusta</a>
+                </li>
+                </ul>
+            </div>
+            </div>
+        </nav>
+        <!-- Navigation ends-->    
     </header>
-    <!-- bootstrap sidebar-->
-    <div class="container-fluid">
-        <div class="row flex-nowrap">
-            <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark sidebar">
-                <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
-                    <a href="/" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-                        <span class="fs-5 d-none d-sm-inline"></span>
-                    </a>
-                    <h3>Tästä muille sivuille:</h3>
-                    <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
-                        <li class="nav-item">
-                            <a href="index.html" class="nav-link align-middle px-0">
-                                <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Pääsivu</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="kuvakysymykset.html" class="nav-link align-middle px-0">
-                                <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Tunnista henkilöt</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="tekstikysymykset.html" class="nav-link align-middle px-0">
-                                <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Tiedä tai arvaa!</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="sivustotieto.html" class="nav-link align-middle px-0">
-                                <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Tietoja sivusta</span>
-                            </a>
-                        </li>
-                    </ul>
-                    <hr>
-                </div>
-            </div>   
-        </div>
-    </div>    
-    <div class="col py-3">
-    <!-- bootstrap sidebar ends-->  
     <div class="container">
         <div class="row">
-            <div class="col-md-6 col-sm-12">
+            <div class="col-md-3 col-sm-6">
+                <a href= "https://pixabay.com/fi/photos/maljakko-amfora-pompeji-italia-1538329/" target="picture" >
+                    <img src="images/vase.jpg"  class="kuva" id="vase">
+                </a>
                 <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat sint, eaque necessitatibus voluptate atque aliquid 
                     voluptatibus eligendi ducimus provident unde modi, animi voluptates fuga cumque a hic eius enim optio.
                 </p>
             </div>
             <div class="col-md-3 col-sm-6">
+                <a href= "https://fi.wikipedia.org/wiki/Nij%C5%8Dn_linna" target="picture" >
+                    <img src="images/NinomaruPalace.jpg"  class="kuva" id="nijon">
+                </a>
                 <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat sint, eaque necessitatibus voluptate atque aliquid 
                     voluptatibus eligendi ducimus provident unde modi, animi voluptates fuga cumque a hic eius enim optio.
                 </p>
             </div>
             <div class="col-md-3 col-sm-6">
+                <a href= "https://pixabay.com/fi/photos/kukulcan-chichenitz%c3%a1-meksiko-2598724/" target="picture" >
+                    <img src="images/kukulcan-2598724_1280.jpg"  class="kuva" id="kukulcan">
+                </a>
                 <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat sint, eaque necessitatibus voluptate atque aliquid 
                     voluptatibus eligendi ducimus provident unde modi, animi voluptates fuga cumque a hic eius enim optio.
                 </p>
             </div>
-        
-        <div class="row">
-            <div class="col">
-            <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat sint, eaque necessitatibus voluptate atque aliquid 
-                voluptatibus eligendi ducimus provident unde modi, animi voluptates fuga cumque a hic eius enim optio.
-            </p>
+            <div class="col-md-3 col-sm-6">
+                <a href= "https://pixabay.com/fi/photos/imatra-suomi-etel%c3%a4-karjala-3778397/" target="picture" >
+                    <img src="images/imatra.jpg"  class="kuva" id="valtiohotelli">
+                </a>
+                <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat sint, eaque necessitatibus voluptate atque aliquid 
+                    voluptatibus eligendi ducimus provident unde modi, animi voluptates fuga cumque a hic eius enim optio.
+                </p>
             </div>
-        </div>
+            <div class="row">
+                <div class="col">
+                <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat sint, eaque necessitatibus voluptate atque aliquid 
+                    voluptatibus eligendi ducimus provident unde modi, animi voluptates fuga cumque a hic eius enim optio.
+                </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat sint, eaque necessitatibus voluptate atque aliquid 
+                    voluptatibus eligendi ducimus provident unde modi, animi voluptates fuga cumque a hic eius enim optio.
+                </p>
+                </div>
+            </div>
     </div>   
-
-
-    <!-- bootstrap css below-->
+    <!-- <div class="row">
+        <div class="col-md-12"> -->
+        <!-- footer below -->
+        <footer>
+          <p>Päivi Karhumaa (c) 2022</p>
+        </footer>        
+    </div>
+      </div> 
+    <!-- bootstrap javascript below-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnik
     T1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
