added onmouseover& leave, changed fresh colours

--- a/kuvakysymykset.html
+++ b/kuvakysymykset.html
@@ -16,7 +16,7 @@
   </head>    
   <body>
     <!-- Header below -->
-    <header></header>
+    <header > <p id="historiikki">HISTORIIKKI <br></p> <p id="lisätieto"> - Tunnista henkilöt - </p> </header>
     <!-- Navigation from bootstrap-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
@@ -50,14 +50,15 @@
       <table>
         <tr>
           <td>
-            <h1>Tunnistatko henkilön?</h1> 
+            <h1>Kuka on kuvassa?</h1> 
           </td>                
         </tr>
         <tr>
           <td>
             <h2> Valitse oikea vastaus ja klikkaa "Tarkista"</h2>
           </td>
-          <td><button id="aloitusnappi" onclick="start()">Aloita tästä</button> 
+          <td>
+            <button id="aloitusnappi" onclick="start()">Aloita tästä</button>
           </td>
         </tr>
       </table>  
