--- a/paikat.html
+++ b/paikat.html
@@ -14,8 +14,11 @@
     <script src="paikat.js" defer></script>    
 </head>
 <body>
+    <!-- Header below -->
     <header>
-        <h1>Nähtävyyksiä historiaa harrastaville</h1>
+        <p id="historiikki">HISTORIIKKI <br></p> 
+        <p id="lisätieto"> - Nähtävyyksiä historian harrastajille - </p> 
+    </header>
         <!-- Navigation from bootstrap-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
