--- a/tekstikysymykset.html
+++ b/tekstikysymykset.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <!-- Header below -->
-    <header></header>
+    <header > <p id="historiikki">HISTORIIKKI <br></p> <p id="lisätieto"> - Tiedä tai arvaa! - </p> </header>
     <!-- Navigation from bootstrap-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
