--- a/sivustotieto.html
+++ b/sivustotieto.html
@@ -16,7 +16,10 @@
 </head>
 <body>
   <!-- Header below -->
-  <header></header>
+  <header>
+    <p id="historiikki">HISTORIIKKI <br></p> 
+    <p id="lisätieto"> - Tietoa sivustosta ja tekijästä - </p> 
+</header>
   <!-- Navbar from Bootstrap-->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
@@ -49,10 +52,10 @@
     <div class="row">
       <div class="col-md-12">
         <article>
-            Sivusto on julkaistu 5/2022 osana OAMK:n Webtekniikat-kurssia. <br></br>
+            Sivusto on julkaistu 5/2022 osana OAMK:n Webtekniikat-kurssia.<br></br>
             Sivusto kehitettiin niillä tekniikoilla, joita on opintojen ensimmäisten neljän kuukauden aikana opetettu.<br></br>
-            Sivuston on tuottanut Päivi Karhumaa TIK22KM. 
-            Kuvalähteinä on käytetty xxxx ja niiden alkuperäisiin lähteisiin pääsee klikkaamalla kuvaa.
+            Sivuston on tuottanut Päivi Karhumaa TIK22KM. <br></br>
+            Kuvalähteinä on käytetty useita eri internetsivuja. Jokaisella sivulla on joko erillinen linkki, tai niiden hakulähteisiin pääsee klikkaamalla kuvaa.
         </article>          
       </div>
     </div>  
