Some changes related to small display

--- a/paikat.html
+++ b/paikat.html
@@ -22,31 +22,30 @@
         <!-- Navigation from bootstrap-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-            <a class="navbar-brand">Tästä muille sivuille:</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" 
+              <a class="navbar-brand">Tästä muille sivuille:</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" 
+                aria-controls="navbarSupportedContent" 
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
+                  <li class="nav-item">
                     <a class="nav-link" href="index.html">Pääsivu</a>
-                </li>  
-                <li class="nav-item">
-                    <a class="nav-link" href="kuvakysymykset.html">Tunnista henkilöt</a>
-                    </li>
-                <li class="nav-item">
+                  </li>  
+                  <li class="nav-item">
                     <a class="nav-link" href="tekstikysymykset.html">Tiedä tai arvaa!</a>
-                </li>
-                
-                <li class="nav-item">
-                    <a class="nav-link" href="sivustotieto.html">Tietoa sivusta</a>
-                </li>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="kuvakysymykset.html">Tunnista henkilöt</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="sivustotieto.html">Tietoja sivustosta</a>
+                  </li>
                 </ul>
+              </div>    
             </div>
-            </div>
-        </nav>
+          </nav>
         <!-- Navigation ends-->    
     </header>
     <div class="container">
