tested fetch other changes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
     <!-- Navigation from bootstrap, under the header-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand">Tästä muille sivuille:</a>
+        <a class="navbar-brand">
+          <!-- Event listener used with the sentence below -->
+          <p>Tästä muille sivuille:</p> 
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
           data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" 
           aria-expanded="false" aria-label="Toggle navigation">
@@ -45,18 +48,18 @@
       </div>
     </nav>
     <!-- Navigation ends-->
-    <!-- task panel with clickable pictures starts -->
+    <!-- "task panel" with clickable pictures starts -->
     <div class="row">
       <div class="col-md-12">
         <article>
           Kuvaketta klikkaamalla pääset vastaamaan kuva-arvoituksiin tai kysymyksiin:
           <br>
           <br>
-        <p>
-          <a href="kuvakysymykset.html"><img src="images/Madame_de_Pompadour_blurred_text.jpg" alt="kuvakysymykset" id="kuvakysymyksetKuvake" class="kuvake"></a>
-          <a href="tekstikysymykset.html"><img src="images/daVinci_text.jpg" alt="tekstikysymykset" id="tekstikysymyksetKuvake" class="kuvake"></a>
-          <a href="paikat.html"><img src="images/vagon.png" alt="paikat" id="paikatKuvake" class="kuvake"></a>
-        </p>
+          <p>
+            <a href="kuvakysymykset.html"><img src="images/Madame_de_Pompadour_blurred_text.jpg" alt="kuvakysymykset" id="kuvakysymyksetKuvake" class="kuvake"></a>
+            <a href="tekstikysymykset.html"><img src="images/daVinci_text.jpg" alt="tekstikysymykset" id="tekstikysymyksetKuvake" class="kuvake"></a>
+            <a href="paikat.html"><img src="images/vagon.png" alt="paikat" id="paikatKuvake" class="kuvake"></a>
+          </p>
         </article>
       </div>
     </div>
