--- a/sivustotieto.html
+++ b/sivustotieto.html
@@ -50,7 +50,7 @@
   <!-- Navbar ends-->
   <!-- information article starts -->
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-6">
         <article>
             Sivusto on julkaistu 5/2022 osana OAMK:n Webtekniikat-kurssia.<br></br>
             Sivusto kehitettiin niillä tekniikoilla, joita on opintojen ensimmäisten neljän kuukauden aikana opetettu.<br></br>
@@ -58,7 +58,8 @@
             Kuvalähteinä on käytetty useita eri internetsivuja. Jokaisella sivulla on joko erillinen linkki, tai niiden hakulähteisiin pääsee klikkaamalla kuvaa.
         </article>          
       </div>
-    </div>  
+        <div class="col-md-6" id="printHere"></div> 
+    </div>
     <div class="row">
       <div class="col-md-12">
       <!-- footer below -->
