--- a/sivustotieto.html
+++ b/sivustotieto.html
@@ -9,8 +9,8 @@
     <!-- Bootstrap CSS file -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- own stylesheet-->
-    <link rel="stylesheet" href="sivustotieto.css">
+    <!-- own stylesheet, used sass-->
+    <link rel="stylesheet" href="sivustotietoSASS/sivustotietocss/sivustotietoSCSS/newstyles.css">
     <!-- JavaScript file -->
     <script src="sivustotieto.js" defer></script>
 </head>
