--- a/sivustotieto.html
+++ b/sivustotieto.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS file -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- own stylesheet, used sass-->
+    <!-- own stylesheet, used SASS-->
     <link rel="stylesheet" href="sivustotietoSASS/sivustotietocss/sivustotietoSCSS/newstyles.css">
     <!-- JavaScript file -->
     <script src="sivustotieto.js" defer></script>
@@ -17,7 +17,7 @@
 <body>
   <!-- Header below -->
   <header>
-    <p id="historiikki">HISTORIIKKI <br></p> 
+    <p class="sassHeadline"id="historiikki">HISTORIIKKI <br></p> 
     <p id="lisätieto"> - Tietoa sivustosta ja tekijästä - </p> 
 </header>
   <!-- Navbar from Bootstrap-->
@@ -52,10 +52,10 @@
     <div class="row">
       <div class="col-md-6">
         <article>
-            Sivusto on julkaistu 5/2022 osana OAMK:n Webtekniikat-kurssia.<br></br>
-            Sivusto kehitettiin niillä tekniikoilla, joita on opintojen ensimmäisten neljän kuukauden aikana opetettu.<br></br>
-            Sivuston on tuottanut Päivi Karhumaa TIK22KM. <br></br>
-            Kuvalähteinä on käytetty useita eri internetsivuja. Jokaisella sivulla on joko erillinen linkki, tai niiden hakulähteisiin pääsee klikkaamalla kuvaa.
+            <p class="info">Sivusto on julkaistu 5/2022 osana OAMK:n Webtekniikat-kurssia.<br></br></p>
+            <p class="info">Sivusto kehitettiin niillä tekniikoilla, joita on opintojen ensimmäisten neljän kuukauden aikana opetettu.<br></br></p>
+            <p class="info">Sivuston on tuottanut Päivi Karhumaa TIK22KM. <br></br></p>
+            <p class="info">Kuvalähteinä on käytetty useita eri internetsivuja. Jokaisella sivulla on joko erillinen linkki, tai niiden hakulähteisiin pääsee klikkaamalla kuvaa.</p>
         </article>          
       </div>
         <div class="col-md-6" id="printHere"></div> 
@@ -64,7 +64,7 @@
       <div class="col-md-12">
       <!-- footer below -->
       <footer>
-        <p>Päivi Karhumaa (c) 2022</p>
+        <p class="p">Päivi Karhumaa (c) 2022</p>
       </footer>        
       </div>
     </div>  
