added information to paikat page

--- a/paikat.html
+++ b/paikat.html
@@ -48,41 +48,59 @@
           </nav>
         <!-- Navigation ends-->    
     </header>
-    <div class="container">
+    <button id="exploreButton1" onclick="vaseBlock()">Tutki</button>
+    <button id="exploreButton2" onclick="nijonBlock()">Tutki</button>
+    <button id="exploreButton3" onclick="kukulcanBlock()">Tutki</button>
+    <button id="exploreButton4" onclick="valtionhotelliBlock()">Tutki</button>
+    <button id="exploreAgain" onclick="again()">Katso uudestaan</button>
+       <div class="container">
         <div class="row">
-            <div class="col-md-3 col-sm-6">
+            <div class="col-md-3 col-sm-6" class="block" id="vaseblock">
                 <a href= "https://pixabay.com/fi/photos/maljakko-amfora-pompeji-italia-1538329/" target="picture" >
                     <img src="images/vase.jpg"  class="kuva" id="vase">
                 </a>
-                <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat sint, eaque necessitatibus voluptate atque aliquid 
-                    voluptatibus eligendi ducimus provident unde modi, animi voluptates fuga cumque a hic eius enim optio.
+                <p> 
+                    Pompeji oli roomalainen kaupunki Italiassa.
+                    Se hautautui Vesuviuksen purkauksessa vuonna 79. 
+                    Pompeji on ollut laajojen arkeologisten tutkimusten kohteena vuodesta 1748 lähtien ja on 
+                    siksi parhaiten tunnettu antiikin maaseutukaupunki. Suuri osa kaupungista on yhä tutkimatta 
+                    ja uusia löytöjä tehdään usein. <a href="https://fi.wikipedia.org/wiki/Pompeji"> Lähde: Wikipedia</a>
                 </p>
             </div>
-            <div class="col-md-3 col-sm-6">
+            <div class="col-md-3 col-sm-6" class="block" id="nijonblock">
                 <a href= "https://fi.wikipedia.org/wiki/Nij%C5%8Dn_linna" target="picture" >
                     <img src="images/NinomaruPalace.jpg"  class="kuva" id="nijon">
                 </a>
-                <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat sint, eaque necessitatibus voluptate atque aliquid 
-                    voluptatibus eligendi ducimus provident unde modi, animi voluptates fuga cumque a hic eius enim optio.
+                <p> Nijōn on v. 1626 valmistunut linna Japanin Kiotossa. 
+                    Linnaan kuuluu mm. kaksi sisäkkäistä linnoituskehää ja Ninomaru-palatsi. 
+                    Linnan pinta-ala on 275 000 neliömetriä, josta rakennettu 7 300 neliömetriä.
+                    Sen alueella on useita puutarhoja sekä japaninkirsikka- ja japaninaprikoosimetsiköitä. 
+                    <a href="https://fi.wikipedia.org/wiki/Nij%C5%8Dn_linna"> Lähde: Wikipedia</a>
                 </p>
             </div>
-            <div class="col-md-3 col-sm-6">
+            <div class="col-md-3 col-sm-6" class="block" id="kukulcanblock">
                 <a href= "https://pixabay.com/fi/photos/kukulcan-chichenitz%c3%a1-meksiko-2598724/" target="picture" >
                     <img src="images/kukulcan-2598724_1280.jpg"  class="kuva" id="kukulcan">
                 </a>
-                <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat sint, eaque necessitatibus voluptate atque aliquid 
-                    voluptatibus eligendi ducimus provident unde modi, animi voluptates fuga cumque a hic eius enim optio.
+                <p> Meksikossa sijaitseva kuuluisa arkeologinen alue ja kaupunki, Chichén Itzá, on myös Unescon 
+                    maailmanperintökohde. Sen rakentamisen aloittivat mayat ja kaupunki olikin keskeinen paikka noin vuonna 600.
+                    Alueella sijaitsee useita kiinnostavia rakennelmia, kuten Kukulcan pyramidi.
+                    <a href="https://fi.wikipedia.org/wiki/Chich%C3%A9n_Itz%C3%A1"> Lähde: Wikipedia</a>
                 </p>
             </div>
-            <div class="col-md-3 col-sm-6">
+            <div class="col-md-3 col-sm-6" class="block" id="valtionhotelliblock">
                 <a href= "https://pixabay.com/fi/photos/imatra-suomi-etel%c3%a4-karjala-3778397/" target="picture" >
-                    <img src="images/imatra.jpg"  class="kuva" id="valtiohotelli">
+                    <img src="images/imatra.jpg"  class="kuva" id="valtionhotelli">
                 </a>
-                <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat sint, eaque necessitatibus voluptate atque aliquid 
-                    voluptatibus eligendi ducimus provident unde modi, animi voluptates fuga cumque a hic eius enim optio.
+                <p> Imatran Valtionhotelli on Imatrankosken partaalla sijaitseva, vuonna 1903 valmistunut 
+                    arkkitehti Usko Nyströmin suunnittelema jugendlinna, joka toimii edelleen hotellina. Hotelli on toiminut 
+                    mm. sotilassairaalana ja armeijan esikuntana. Hotellin kellarissa toimi myös toisen maailmansodan aikana 
+                    Imatran ilmatorjuntakeskus.
+                    <a href="https://fi.wikipedia.org/wiki/Imatran_Valtionhotelli"> Lähde: Wikipedia</a>
                 </p>
             </div>
-            <div class="row">
+            <!-- Maybe continue later with these next ideas  -->
+            <!-- <div class="row">
                 <div class="col">
                 <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat sint, eaque necessitatibus voluptate atque aliquid 
                     voluptatibus eligendi ducimus provident unde modi, animi voluptates fuga cumque a hic eius enim optio.
@@ -95,7 +113,7 @@
                     voluptatibus eligendi ducimus provident unde modi, animi voluptates fuga cumque a hic eius enim optio.
                 </p>
                 </div>
-            </div>
+            </div> -->
     </div>   
     <!-- <div class="row">
         <div class="col-md-12"> -->
