additional text to sivustotieto

--- a/sivustotieto.html
+++ b/sivustotieto.html
@@ -54,7 +54,7 @@
         <article>
             <p class="info">Sivusto on julkaistu 5/2022 osana OAMK:n Webtekniikat-kurssia.<br></p>
             <p class="info">Tekemisessä käytin niitä tekniikoita, joiden käyttöä harjoiteltiin ensimmäisten neljän kuukauden aikana.<br></p>
-            <p class="info">Sivuston on tuottanut Päivi Karhumaa TIK22KM. <br></p>
+            <p class="info">Sivuston on tuottanut Päivi Karhumaa TIK22KM. Sivustoa on tarkoitus kehittää lisää taitojen karttuessa. <br></p>
             <p class="info">Kuvalähteinä on käytetty useita eri internetsivuja. Jokaisella sivulla on joko erillinen linkki, tai niiden hakulähteisiin pääsee klikkaamalla kuvaa.</p>
         </article>          
       </div>
@@ -64,7 +64,7 @@
       <div class="col-md-12">
       <!-- footer below -->
       <footer>
-        <p class="p">Päivi Karhumaa (c) 2022</p>
+        <p class="p">Päivi Karhumaa (c) 2022 </p>
       </footer>        
       </div>
     </div>  
